--- a/spotify/src/App.css
+++ b/spotify/src/App.css
@@ -89,7 +89,7 @@ ul {
 /* BOTTOM PLAYER SECTION*/
 
 .bg-container {
-  height: 5.5rem;
+  height: 7rem;
   background-color: #282828;
 }
 
@@ -100,6 +100,7 @@ ul {
 .playerControls a img {
   width: 14px;
   margin-top: 1rem;
+  margin-right: 1rem;
   filter: brightness(60%);
 }
 
@@ -157,6 +158,7 @@ ul {
 
 .imgLinks a img:hover {
   filter: brightness(50%);
+ 
 }
 
 #rock,
